Fix overflow bugs in search form.

--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -118,8 +118,8 @@ article.pop-out.dropdown {
 
   div.content {
     width: 90%;
-    height: 90%;
-    padding: 5%;
+    height: 100%;
+    padding: 0 5%;
     overflow: auto;
   }
 }
